# pass-fort

./: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  reactuse.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  password_generator.rs  password_storage.rs
src-tauri/src/db/: core.rs  mod.rs
src-tauri/src/db/models/: mod.rs  password_storage.rs
src-tauri/src/dto/: password_storage.rs
src-tauri/src/utils/: api_result.rs
src/components/features/: appbar.tsx
src/components/forms/: create-password-storage.form.tsx  open-password-storage.form.tsx
src/components/forms/password-generator-form/: index.tsx  password-controllers.form.tsx
src/components/layouts/: dashboard.layout.tsx  home.layout.tsx  main.layout.tsx
src/components/shared/: logo.tsx
src/components/ui/: loading-button.tsx  motion-box.tsx  theme-toggle.tsx
src/configs/: app.ts  invoke-commands.ts  paths.ts
src/hooks/: index.ts  useInvoke.ts  useListen.ts  useMediaQuery.ts
src/providers/: router-provider.tsx  theme-providers.tsx  toasts-provider.tsx
src/screens/: home.screen.tsx  password-generator.screen.tsx  password-storage.screen.tsx
src/screens/dashboard/: index.tsx
src/ts/: password-storage.ts
src/utils/: chekWindowIsExist.ts
src/zod-schemas/: password-storage.schema.ts
